# multi-language-monorepo-magic

./: .pre-commit-config.yaml  BUILD.bazel  Cargo.toml  MODULE.bazel  README.bazel.md  WORKSPACE.bazel  gazelle_python.yaml  go.mod  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.aspect/cli/: config.yaml
.github/workflows/: ci.yaml  weekly_tag.yaml
requirements/: all.txt  runtime.txt
tools/: _run_under_cwd.sh  terraform
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  linters.bzl
tools/oci/: py3_image.bzl
tools/toolchains/: BUILD.bazel
