"""BUILD definition for the formatter binary

This is in its own package because it has so many loading-time symbols,
we don't want to trigger eager fetches of these for builds that don't want to run format.
"""

load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@npm//:prettier/package_json.bzl", prettier = "bin")

package(default_visibility = ["//:__subpackages__"])

prettier.prettier_binary(
    name = "prettier",
    env = {"BAZEL_BINDIR": "."},
)

format_multirun(
    name = "format",
    cc = "@llvm_toolchain_llvm//:bin/clang-format",
    css = ":prettier",
    go = "@aspect_rules_lint//format:gofumpt",
    graphql = ":prettier",
    javascript = ":prettier",
    markdown = ":prettier",
    python = "@aspect_rules_lint//format:ruff",
    rust = "@rules_rust//tools/rustfmt:upstream_rustfmt",
    shell = "@aspect_rules_lint//format:shfmt",
    sql = ":prettier",
    starlark = "@buildifier_prebuilt//:buildifier",
    terraform = "@aspect_rules_lint//format:terraform",
    yaml = "@aspect_rules_lint//format:yamlfmt",
)
